add swagger option
